cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(abuzzer C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(abuzzer
	main.c
)

pico_enable_stdio_usb(abuzzer 1)
pico_enable_stdio_uart(abuzzer 1)

pico_add_extra_outputs(abuzzer)

target_link_libraries(abuzzer pico_stdlib)
